// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders commands correctly 1`] = `
<div>
  <div
    class="TestClassName"
  >
    <div
      style="position: relative;"
    >
      <div
        data-automation-id="visibleContent"
        style="position: fixed; visibility: hidden;"
      >
        <div
          class=
              ms-FocusZone
              ms-CommandBar
              &:focus {
                outline: none;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #ffffff;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 44px;
                padding-bottom: 0;
                padding-left: 24px;
                padding-right: 14px;
                padding-top: 0;
              }
          data-focuszone-id="FocusZone0"
          role="menubar"
        >
          <div
            class=
                ms-OverflowSet
                ms-CommandBar-primaryCommand
                {
                  align-items: stretch;
                  display: flex;
                  flex-grow: 1;
                  flex-wrap: nowrap;
                  position: relative;
                }
            role="none"
          >
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                class=
                    ms-Button
                    ms-Button--commandBar
                    ms-CommandBarItem-link
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      background-color: #ffffff;
                      border-radius: 0px;
                      border: none;
                      box-sizing: border-box;
                      color: #323130;
                      cursor: pointer;
                      display: inline-block;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                      height: 100%;
                      min-width: 40px;
                      outline: transparent;
                      padding-bottom: 0;
                      padding-left: 4px;
                      padding-right: 4px;
                      padding-top: 0;
                      position: relative;
                      text-align: center;
                      text-decoration: none;
                      user-select: none;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 3px;
                      content: "";
                      left: 3px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 3px;
                      top: 3px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      border: none;
                      bottom: 4px;
                      left: 4px;
                      outline-color: ButtonText;
                      right: 4px;
                      top: 4px;
                    }
                    &:active > * {
                      left: 0px;
                      position: relative;
                      top: 0px;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                      border: none;
                    }
                    &:hover {
                      background-color: #f3f2f1;
                      color: #201f1e;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
                      color: Highlight;
                    }
                    &:hover .ms-Button-icon {
                      color: #106ebe;
                    }
                    &:hover .ms-Button-menuIcon {
                      color: #323130;
                    }
                    &:active {
                      background-color: #edebe9;
                      color: #201f1e;
                    }
                    &:active .ms-Button-icon {
                      color: #005a9e;
                    }
                    &:active .ms-Button-menuIcon {
                      color: #323130;
                    }
                data-is-focusable="true"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span
                  class=
                      ms-Button-flexContainer
                      {
                        align-items: center;
                        display: flex;
                        flex-wrap: nowrap;
                        height: 100%;
                        justify-content: center;
                      }
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    class=
                        ms-Button-textContainer
                        {
                          display: block;
                          flex-grow: 1;
                        }
                  >
                    <span
                      class=
                          ms-Button-label
                          {
                            display: block;
                            font-weight: normal;
                            line-height: 100%;
                            margin-bottom: 0;
                            margin-left: 4px;
                            margin-right: 4px;
                            margin-top: 0;
                            white-space: nowrap;
                          }
                      id="id__1"
                    >
                      asdf
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                class=
                    ms-Button
                    ms-Button--commandBar
                    ms-CommandBarItem-link
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      background-color: #ffffff;
                      border-radius: 0px;
                      border: none;
                      box-sizing: border-box;
                      color: #323130;
                      cursor: pointer;
                      display: inline-block;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                      height: 100%;
                      min-width: 40px;
                      outline: transparent;
                      padding-bottom: 0;
                      padding-left: 4px;
                      padding-right: 4px;
                      padding-top: 0;
                      position: relative;
                      text-align: center;
                      text-decoration: none;
                      user-select: none;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 3px;
                      content: "";
                      left: 3px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 3px;
                      top: 3px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      border: none;
                      bottom: 4px;
                      left: 4px;
                      outline-color: ButtonText;
                      right: 4px;
                      top: 4px;
                    }
                    &:active > * {
                      left: 0px;
                      position: relative;
                      top: 0px;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                      border: none;
                    }
                    &:hover {
                      background-color: #f3f2f1;
                      color: #201f1e;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
                      color: Highlight;
                    }
                    &:hover .ms-Button-icon {
                      color: #106ebe;
                    }
                    &:hover .ms-Button-menuIcon {
                      color: #323130;
                    }
                    &:active {
                      background-color: #edebe9;
                      color: #201f1e;
                    }
                    &:active .ms-Button-icon {
                      color: #005a9e;
                    }
                    &:active .ms-Button-menuIcon {
                      color: #323130;
                    }
                data-is-focusable="true"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <span
                  class=
                      ms-Button-flexContainer
                      {
                        align-items: center;
                        display: flex;
                        flex-wrap: nowrap;
                        height: 100%;
                        justify-content: center;
                      }
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    class=
                        ms-Button-textContainer
                        {
                          display: block;
                          flex-grow: 1;
                        }
                  >
                    <span
                      class=
                          ms-Button-label
                          {
                            display: block;
                            font-weight: normal;
                            line-height: 100%;
                            margin-bottom: 0;
                            margin-left: 4px;
                            margin-right: 4px;
                            margin-top: 0;
                            white-space: nowrap;
                          }
                      id="id__4"
                    >
                      asdf
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommandBar renders empty farItems correctly 1`] = `
<div>
  <div>
    <div
      style="position: relative;"
    >
      <div
        data-automation-id="visibleContent"
        style="position: fixed; visibility: hidden;"
      >
        <div
          class=
              ms-FocusZone
              ms-CommandBar
              &:focus {
                outline: none;
              }
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #ffffff;
                display: flex;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 44px;
                padding-bottom: 0;
                padding-left: 24px;
                padding-right: 14px;
                padding-top: 0;
              }
          data-focuszone-id="FocusZone0"
          role="menubar"
        >
          <div
            class=
                ms-OverflowSet
                ms-CommandBar-primaryCommand
                {
                  align-items: stretch;
                  display: flex;
                  flex-grow: 1;
                  flex-wrap: nowrap;
                  position: relative;
                }
            role="none"
          >
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                class=
                    ms-Button
                    ms-Button--commandBar
                    ms-CommandBarItem-link
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      background-color: #ffffff;
                      border-radius: 0px;
                      border: none;
                      box-sizing: border-box;
                      color: #323130;
                      cursor: pointer;
                      display: inline-block;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                      height: 100%;
                      min-width: 40px;
                      outline: transparent;
                      padding-bottom: 0;
                      padding-left: 4px;
                      padding-right: 4px;
                      padding-top: 0;
                      position: relative;
                      text-align: center;
                      text-decoration: none;
                      user-select: none;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 3px;
                      content: "";
                      left: 3px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 3px;
                      top: 3px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      border: none;
                      bottom: 4px;
                      left: 4px;
                      outline-color: ButtonText;
                      right: 4px;
                      top: 4px;
                    }
                    &:active > * {
                      left: 0px;
                      position: relative;
                      top: 0px;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                      border: none;
                    }
                    &:hover {
                      background-color: #f3f2f1;
                      color: #201f1e;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
                      color: Highlight;
                    }
                    &:hover .ms-Button-icon {
                      color: #106ebe;
                    }
                    &:hover .ms-Button-menuIcon {
                      color: #323130;
                    }
                    &:active {
                      background-color: #edebe9;
                      color: #201f1e;
                    }
                    &:active .ms-Button-icon {
                      color: #005a9e;
                    }
                    &:active .ms-Button-menuIcon {
                      color: #323130;
                    }
                data-is-focusable="true"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                <span
                  class=
                      ms-Button-flexContainer
                      {
                        align-items: center;
                        display: flex;
                        flex-wrap: nowrap;
                        height: 100%;
                        justify-content: center;
                      }
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    class=
                        ms-Button-textContainer
                        {
                          display: block;
                          flex-grow: 1;
                        }
                  >
                    <span
                      class=
                          ms-Button-label
                          {
                            display: block;
                            font-weight: normal;
                            line-height: 100%;
                            margin-bottom: 0;
                            margin-left: 4px;
                            margin-right: 4px;
                            margin-top: 0;
                            white-space: nowrap;
                          }
                      id="id__1"
                    >
                      asdf
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                class=
                    ms-Button
                    ms-Button--commandBar
                    ms-CommandBarItem-link
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      background-color: #ffffff;
                      border-radius: 0px;
                      border: none;
                      box-sizing: border-box;
                      color: #323130;
                      cursor: pointer;
                      display: inline-block;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                      height: 100%;
                      min-width: 40px;
                      outline: transparent;
                      padding-bottom: 0;
                      padding-left: 4px;
                      padding-right: 4px;
                      padding-top: 0;
                      position: relative;
                      text-align: center;
                      text-decoration: none;
                      user-select: none;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 3px;
                      content: "";
                      left: 3px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 3px;
                      top: 3px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      border: none;
                      bottom: 4px;
                      left: 4px;
                      outline-color: ButtonText;
                      right: 4px;
                      top: 4px;
                    }
                    &:active > * {
                      left: 0px;
                      position: relative;
                      top: 0px;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                      border: none;
                    }
                    &:hover {
                      background-color: #f3f2f1;
                      color: #201f1e;
                    }
                    @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover {
                      color: Highlight;
                    }
                    &:hover .ms-Button-icon {
                      color: #106ebe;
                    }
                    &:hover .ms-Button-menuIcon {
                      color: #323130;
                    }
                    &:active {
                      background-color: #edebe9;
                      color: #201f1e;
                    }
                    &:active .ms-Button-icon {
                      color: #005a9e;
                    }
                    &:active .ms-Button-menuIcon {
                      color: #323130;
                    }
                data-is-focusable="true"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                <span
                  class=
                      ms-Button-flexContainer
                      {
                        align-items: center;
                        display: flex;
                        flex-wrap: nowrap;
                        height: 100%;
                        justify-content: center;
                      }
                  data-automationid="splitbuttonprimary"
                >
                  <span
                    class=
                        ms-Button-textContainer
                        {
                          display: block;
                          flex-grow: 1;
                        }
                  >
                    <span
                      class=
                          ms-Button-label
                          {
                            display: block;
                            font-weight: normal;
                            line-height: 100%;
                            margin-bottom: 0;
                            margin-left: 4px;
                            margin-right: 4px;
                            margin-top: 0;
                            white-space: nowrap;
                          }
                      id="id__4"
                    >
                      asdf
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
